# react-sqlite-tauri-template

./: .gitignore  .pnpmrc  AI_RULES.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: made-with-dyad.tsx
src/components/ui/: accordion.tsx  alert-dialog.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input-otp.tsx  input.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  sheet.tsx  sidebar.tsx  slider.tsx  switch.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx
src/hooks/: use-toast.ts
src/pages/: Index.tsx  NotFound.tsx
