[package]
name = "react-tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "react-tauri-app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-sql = { version = "2.2", features = ["sqlite"] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
default = [ "custom-protocol" ] 
